# raspa-mcp

./: .gitignore  README.md  featherflow_config_snippet.json  pyproject.toml
docs/: workflow.md
raspa_mcp/: __init__.py  cif_tools.py  generators.py  installer.py  parser.py  server.py  validator.py
raspa_mcp/data/: __init__.py  forcefields.py  molecules.py  templates.py
tests/: test_fixes.py  test_generators.py  test_preflight.py  test_server.py
