[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raspa-mcp"
version = "0.1.0"
description = "MCP server for RASPA2 molecular simulation — template, forcefield, validation, and output parsing"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.4.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
raspa-mcp = "raspa_mcp.server:main"
raspa-mcp-setup = "raspa_mcp.installer:setup"

[tool.hatch.build.targets.wheel]
packages = ["raspa_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
